@@ -14,147 +14,131 @@ This is a {{ site.pmd.release_type }} release.
 
 ### New and noteworthy
 
-#### Java 13 Support
+#### Updated PMD Designer
 
-This release of PMD brings support for Java 13. PMD can parse [Switch Expressions](http://openjdk.java.net/jeps/354)
-with the new `yield` statement and resolve the type of such an expression.
+This PMD release ships a new version of the pmd-designer.
+For the changes, see [PMD Designer Changelog](https://github.com/pmd/pmd-designer/releases/tag/6.19.0).
 
-PMD also parses [Text Blocks](http://openjdk.java.net/jeps/355) as String literals.
+#### Java Metrics
 
-Note: The Switch Expressions and Text Blocks are a preview language feature of OpenJDK 13
-and are not enabled by default. In order to
-analyze a project with PMD that uses these language features, you'll need to enable it via the environment
-variable `PMD_JAVA_OPTS` and select the new language version `13-preview`:
+*   The new metric "Class Fan Out Complexity" has been added. See
+    [Java Metrics Documentation](pmd_java_metrics_index.html#class-fan-out-complexity-class_fan_out) for details.
 
-    export PMD_JAVA_OPTS=--enable-preview
-    ./run.sh pmd -language java -version 13-preview ...
-
-Note: Support for the extended break statement introduced in Java 12 as a preview language feature
-will be removed with the next PMD version 6.19.0.
-
-#### Full support for Scala
-
-Thanks to [Chris Smith](https://github.com/tophersmith) PMD now fully supports Scala. Now rules for analyzing Scala
-code can be developed in addition to the Copy-Paste-Detection (CPD) functionality. There are no rules yet, so
-contributions are welcome.
-
-Additionally Scala support has been upgraded from 2.12.4 to 2.13.
-
-#### New rule designer documentation
-
-The documentation for the rule designer is now available on the main PMD documentation page:
-[Rule Designer Reference](pmd_userdocs_extending_designer_reference.html). Check it out to learn
-about the usage and features of the rule designer.
-
-#### New rules
-
-*   The Java rule {% rule "java/bestpractices/AvoidMessageDigestField" %} (`java-bestpractices`) detects fields
-    of the type `java.security.MessageDigest`. Using a message digest instance as a field would need to be
-    synchronized, as it can easily be used by multiple threads. Without synchronization the calculated hash could
-    be entirely wrong. Instead of declaring this as a field and synchronize access to use it from multiple threads,
-    a new instance should be created when needed. This rule is also active when using java's quickstart ruleset.
-
-*   The Apex rule {% rule "apex/bestpractices/DebugsShouldUseLoggingLevel" %} (`apex-bestpractices`) detects
-    usages of `System.debug()` method calls that are used without specifying the log level. Having the log
-    level specified provides a cleaner log, and improves readability of it.
 
 #### Modified Rules
 
-*   The Java rule {% rule "java/errorprone/CloseResource" %} (`java-errorprone`) now ignores by default instances
-    of `java.util.stream.Stream`. These streams are `AutoCloseable`, but most streams are backed by collections,
-    arrays, or generating functions, which require no special resource management. However, there are some exceptions:
-    The stream returned by `Files::lines(Path)` is backed by a actual file and needs to be closed. These instances
-    won't be found by default by the rule anymore.
+*   The Java rules {% rule "java/errorprone/InvalidLogMessageFormat" %} and {% rule "java/errorprone/MoreThanOneLogger" %}
+    (`java-errorprone`) now both support [Log4j2](https://logging.apache.org/log4j/2.x/). Note that the
+    rule "InvalidSlf4jMessageFormat" has been renamed to "InvalidLogMessageFormat" to reflect the fact, that it now
+    supports more than slf4j.
+
+*   The Java rule {% rule "java/design/LawOfDemeter" %} (`java-design`) ignores now also Builders, that are
+    not assigned to a local variable, but just directly used within a method call chain. The method, that creates
+    the builder needs to end with "Builder", e.g. `newBuilder()` or `initBuilder()` works. This change
+    fixes a couple of false positives.
+
+*   The Java rule {% rule "java/errorprone/DataflowAnomalyAnalysis" %} (`java-errorprone`) doesn't check for
+    UR anomalies (undefined and then referenced) anymore. These checks were all false-positives, since actual
+    UR occurrences would lead to compile errors.
+
+*   The java rule {% rule "java/multithreading/DoNotUseThreads" %} (`java-multithreading`) has been changed
+    to not report usages of `java.lang.Runnable` anymore. Just using `Runnable` does not automatically create
+    a new thread. While the check for `Runnable` has been removed, the rule now additionally checks for
+    usages of `Executors` and `ExecutorService`. Both create new threads, which are not managed by a J2EE
+    server.
+
+#### Renamed Rules
+
+*   The Java rule {% rule "java/errorprone/InvalidSlf4jMessageFormat" %} has been renamed to
+    {% rule "java/errorprone/InvalidLogMessageFormat" %} since it supports now both slf4j and log4j2
+    message formats.
 
 ### Fixed Issues
 
-*   all
-    *   [#1465](https://github.com/pmd/pmd/issues/1465): \[core] Stylesheet pmd-report.xslt fails to display filepath if 'java' in path
-    *   [#1923](https://github.com/pmd/pmd/issues/1923): \[core] Incremental analysis does not work with shortnames
-    *   [#1983](https://github.com/pmd/pmd/pull/1983): \[core] Avoid crashes with analysis cache when classpath references non-existing directories
-    *   [#1990](https://github.com/pmd/pmd/pull/1990): \[core] Incremental analysis mixes XPath rule violations
-*   apex
-    *   [#1901](https://github.com/pmd/pmd/issues/1901): \[apex] Expose super type name of UserClass
-    *   [#1942](https://github.com/pmd/pmd/issues/1942): \[apex] Add best practice rule for debug statements in Apex
+*   core
+    *   [#1978](https://github.com/pmd/pmd/issues/1978): \[core] PMD fails on excluding unknown rules
+    *   [#2014](https://github.com/pmd/pmd/issues/2014): \[core] Making add(SourceCode sourceCode) public for alternative file systems
+    *   [#2020](https://github.com/pmd/pmd/issues/2020): \[core] Wrong deprecation warnings for unused XPath attributes
+    *   [#2036](https://github.com/pmd/pmd/issues/2036): \[core] Wrong include/exclude patterns are silently ignored
+    *   [#2048](https://github.com/pmd/pmd/issues/2048): \[core] Enable type resolution by default for XPath rules
+    *   [#2067](https://github.com/pmd/pmd/issues/2067): \[core] Build issue on Windows
+    *   [#2068](https://github.com/pmd/pmd/pull/2068): \[core] Rule loader should use the same resources loader for the ruleset
+    *   [#2071](https://github.com/pmd/pmd/issues/2071): \[ci] Add travis build on windows
+    *   [#2072](https://github.com/pmd/pmd/issues/2072): \[test]\[core] Not enough info in "test setup error" when numbers of lines do not match
+    *   [#2082](https://github.com/pmd/pmd/issues/2082): \[core] Incorrect logging of deprecated/renamed rules
 *   java
-    *   [#1930](https://github.com/pmd/pmd/issues/1930): \[java] Add Java 13 support
+    *   [#2042](https://github.com/pmd/pmd/issues/2042): \[java] PMD crashes with ClassFormatError: Absent Code attribute...
 *   java-bestpractices
-    *   [#1227](https://github.com/pmd/pmd/issues/1227): \[java] UnusedFormalParameter should explain checkAll better
-    *   [#1862](https://github.com/pmd/pmd/issues/1862): \[java] New rule for MessageDigest.getInstance
-    *   [#1952](https://github.com/pmd/pmd/issues/1952): \[java] UnusedPrivateField not triggering if @Value annotation present
+    *   [#1531](https://github.com/pmd/pmd/issues/1531): \[java] UnusedPrivateMethod false-positive with method result
+    *   [#2025](https://github.com/pmd/pmd/issues/2025): \[java] UnusedImports when @see / @link pattern includes a FQCN
 *   java-codestyle
-    *   [#1951](https://github.com/pmd/pmd/issues/1951): \[java] UnnecessaryFullyQualifiedName rule triggered when variable name clashes with package name
+    *   [#2017](https://github.com/pmd/pmd/issues/2017): \[java] UnnecessaryFullyQualifiedName triggered for inner class
+*   java-design
+    *   [#1912](https://github.com/pmd/pmd/issues/1912): \[java] Metrics not computed correctly with annotations
 *   java-errorprone
-    *   [#1922](https://github.com/pmd/pmd/issues/1922): \[java] CloseResource possible false positive with Streams
-    *   [#1966](https://github.com/pmd/pmd/issues/1966): \[java] CloseResource false positive if Stream is passed as method parameter
-    *   [#1967](https://github.com/pmd/pmd/issues/1967): \[java] CloseResource false positive with late assignment of variable
-*   plsql
-    *   [#1933](https://github.com/pmd/pmd/issues/1933): \[plsql] ParseException with cursor declared in anonymous block
-    *   [#1935](https://github.com/pmd/pmd/issues/1935): \[plsql] ParseException with SELECT INTO record defined as global variable
-    *   [#1936](https://github.com/pmd/pmd/issues/1936): \[plslq] ParseException with cursor inside procedure declaration
-    *   [#1946](https://github.com/pmd/pmd/issues/1946): \[plsql] ParseException with using TRIM inside IF statements condition
-    *   [#1947](https://github.com/pmd/pmd/issues/1947): \[plsql] ParseError - SELECT with FOR UPDATE OF
-    *   [#1948](https://github.com/pmd/pmd/issues/1948): \[plsql] ParseException with INSERT INTO using package global variables
-    *   [#1950](https://github.com/pmd/pmd/issues/1950): \[plsql] ParseException with UPDATE and package record variable
-    *   [#1953](https://github.com/pmd/pmd/issues/1953): \[plsql] ParseException with WITH in CURSOR
+    *   [#336](https://github.com/pmd/pmd/issues/336): \[java] InvalidSlf4jMessageFormat applies to log4j2
+    *   [#1636](https://github.com/pmd/pmd/issues/1636): \[java] Stop checking UR anomalies for DataflowAnomalyAnalysis
+*   java-multithreading
+    *   [#1627](https://github.com/pmd/pmd/issues/1627): \[java] DoNotUseThreads should not warn on Runnable
+*   doc
+    * [#2058](https://github.com/pmd/pmd/issues/2058): \[doc] CLI reference for `-norulesetcompatibility` shows a boolean default value
+
 
 ### API Changes
-
-#### Changes to Renderer
-
-*   Each renderer has now a new method {% jdoc !!core::renderers.Renderer#setUseShortNames(List) %} which
-    is used for implementing the "shortnames" CLI option. The method is automatically called by PMD, if this
-    CLI option is in use. When rendering filenames to the report, the new helper method
-    {% jdoc !!core::renderers.AbstractRenderer#determineFileName(String) %} should be used. This will change
-    the filename to a short name, if the CLI option "shortnames" is used.
-    
-    Not adjusting custom renderers will make them render always the full file names and not honoring the
-    CLI option "shortnames".
 
 #### Deprecated APIs
 
 ##### For removal
 
-*   The methods {% jdoc java::lang.java.ast.ASTImportDeclaration#getImportedNameNode() %} and
-    {% jdoc java::lang.java.ast.ASTImportDeclaration#getPackage() %} have been deprecated and
-    will be removed with PMD 7.0.0.
-*   The method {% jdoc !!core::RuleContext#setSourceCodeFilename(String) %} has been deprecated
-    and will be removed. The already existing method {% jdoc !!core::RuleContext#setSourceCodeFile(File) %}
-    should be used instead. The method {% jdoc !!core::RuleContext#getSourceCodeFilename() %} still
-    exists and returns just the filename without the full path.
-*   The method {% jdoc !!core::processor.AbstractPMDProcessor#filenameFrom(DataSource) %} has been
-    deprecated. It was used to determine a "short name" of the file being analyzed, so that the report
-    can use short names. However, this logic has been moved to the renderers.
-*   The method {% jdoc !!core::Report#metrics() %} and {% jdoc core::Report::hasMetrics() %} have
-    been deprecated. They were leftovers from a previous deprecation round targeting
-    {% jdoc core::lang.rule.stat.StatisticalRule %}.
+* pmd-core
+  * All the package {% jdoc_package core::dcd %} and its subpackages. See {% jdoc core::dcd.DCD %}.
+  * In {% jdoc core::lang.LanguageRegistry %}:
+    * {% jdoc core::lang.LanguageRegistry#commaSeparatedTerseNamesForLanguageVersion(List) %}
+    * {% jdoc core::lang.LanguageRegistry#commaSeparatedTerseNamesForLanguage(List) %}
+    * {% jdoc core::lang.LanguageRegistry#findAllVersions() %}
+    * {% jdoc core::lang.LanguageRegistry#findLanguageVersionByTerseName(String) %}
+    * {% jdoc core::lang.LanguageRegistry#getInstance() %}
+  * {% jdoc !!core::RuleSet#getExcludePatterns() %}. Use the new method {% jdoc core::RuleSet#getFileExclusions() %} instead.
+  * {% jdoc !!core::RuleSet#getIncludePatterns() %}. Use the new method {% jdoc core::RuleSet#getFileInclusions() %} instead.
+  * {% jdoc !!core::lang.Parser#canParse() %}
+  * {% jdoc !!core::lang.Parser#getSuppressMap() %}
+  * {% jdoc !!core::rules.RuleBuilder#RuleBuilder(String,String,String) %}. Use the new constructor with the correct ResourceLoader instead.
+  * {% jdoc !!core::rules.RuleFactory#RuleFactory() %}. Use the new constructor with the correct ResourceLoader instead.
+* pmd-java
+  * {% jdoc java::lang.java.ast.CanSuppressWarnings %} and its implementations
+  * {% jdoc java::lang.java.rule.AbstractJavaRule#isSuppressed(Node) %}
+  * {% jdoc java::lang.java.rule.AbstractJavaRule#getDeclaringType(Node) %}.
+  * {% jdoc java::lang.java.rule.JavaRuleViolation#isSupressed(Node,Rule) %}
+  * {% jdoc java::lang.java.ast.ASTMethodDeclarator %}
+  * {% jdoc java::lang.java.ast.ASTMethodDeclaration#getMethodName() %}
+  * {% jdoc java::lang.java.ast.ASTMethodDeclaration#getBlock() %}
+  * {% jdoc java::lang.java.ast.ASTConstructorDeclaration#getParameterCount() %}
+* pmd-apex
+  * {% jdoc apex::lang.apex.ast.CanSuppressWarnings %} and its implementations
+  * {% jdoc apex::lang.apex.rule.ApexRuleViolation#isSupressed(Node,Rule) %}
 
 ##### Internal APIs
 
-Those APIs are not intended to be used by clients, and will be hidden or removed with PMD 7.0.0. You can identify them with the `@InternalApi` annotation. You'll also get a deprecation warning.
-
 * pmd-core
-  * {% jdoc_package core::cache %}
-* pmd-java
-  * {% jdoc_package java::lang.java.typeresolution %}: Everything, including
-    subpackages, except {% jdoc java::lang.java.typeresolution.TypeHelper %} and
-    {% jdoc java::lang.java.typeresolution.typedefinition.JavaTypeDefinition %}.
-  * {% jdoc !c!java::lang.java.ast.ASTCompilationUnit#getClassTypeResolver() %}
+  * All the package {% jdoc_package core::util %} and its subpackages,
+  except {% jdoc_package core::util.datasource %} and {% jdoc_package core::util.database %}.
+  * {% jdoc core::cpd.GridBagHelper %}
+  * {% jdoc core::renderers.ColumnDescriptor %}
+
+
 
 ### External Contributions
 
-*   [#1943](https://github.com/pmd/pmd/pull/1943): \[apex] Adds "debug should use logging level" best practice rule for Apex - [Renato Oliveira](https://github.com/renatoliveira)
-*   [#1965](https://github.com/pmd/pmd/pull/1965): \[scala] Use Scalameta for parsing - [Chris Smith](https://github.com/tophersmith)
-*   [#1970](https://github.com/pmd/pmd/pull/1970): \[java] DoubleBraceInitialization: Fix example - [Tobias Weimer](https://github.com/tweimer)
-*   [#1971](https://github.com/pmd/pmd/pull/1971): \[java] 1862 - Message Digest should not be used as class field - [AnthonyKot](https://github.com/AnthonyKot)
-*   [#1972](https://github.com/pmd/pmd/pull/1972): \[plsql] ParseError - SELECT with FOR UPDATE OF - [Piotr Szymanski](https://github.com/szyman23)
-*   [#1974](https://github.com/pmd/pmd/pull/1974): \[plsql] Fixes for referencing record type variables - [Piotr Szymanski](https://github.com/szyman23)
-*   [#1975](https://github.com/pmd/pmd/pull/1975): \[plsql] TRIM function with record type variables - [Piotr Szymanski](https://github.com/szyman23)
-*   [#1976](https://github.com/pmd/pmd/pull/1976): \[plsql] Fix for mistaking / for MultiplicativeExpression - [Piotr Szymanski](https://github.com/szyman23)
-*   [#1977](https://github.com/pmd/pmd/pull/1977): \[plsql] fix for skipping sql starting with WITH - [Piotr Szymanski](https://github.com/szyman23)
-*   [#1986](https://github.com/pmd/pmd/pull/1986): \[plsql] Fix for cursors in anonymous blocks - [Piotr Szymanski](https://github.com/szyman23)
-*   [#1994](https://github.com/pmd/pmd/pull/1994): \[core] Resolve pmd-report failure when java folder in filepath - [Amish Shah](https://github.com/shahamish150294)
-*   [#2015](https://github.com/pmd/pmd/pull/2015): \[java] Update doc for unused formal parameter - [Amish Shah](https://github.com/shahamish150294)
+*   [#2010](https://github.com/pmd/pmd/pull/2010): \[java] LawOfDemeter to support inner builder pattern - [Gregor Riegler](https://github.com/gregorriegler)
+*   [#2012](https://github.com/pmd/pmd/pull/2012): \[java] Fixes 336, slf4j log4j2 support - [Mark Hall](https://github.com/markhall82)
+*   [#2032](https://github.com/pmd/pmd/pull/2032): \[core] Allow adding SourceCode directly into CPD - [Nathan Braun](https://github.com/nbraun-Google)
+*   [#2047](https://github.com/pmd/pmd/pull/2047): \[java] Fix computation of metrics with annotations - [Andi Pabst](https://github.com/andipabst)
+*   [#2065](https://github.com/pmd/pmd/pull/2065): \[java] Stop checking UR anomalies - [Carlos Macasaet](https://github.com/l0s)
+*   [#2068](https://github.com/pmd/pmd/pull/2068): \[core] Rule loader should use the same resources loader for the ruleset - [Chen Yang](https://github.com/willamette)
+*   [#2070](https://github.com/pmd/pmd/pull/2070): \[core] Fix renderer tests for windows builds - [Saladoc](https://github.com/Saladoc)
+*   [#2073](https://github.com/pmd/pmd/pull/2073): \[test]\[core] Add expected and actual line of numbers to message wording - [snuyanzin](https://github.com/snuyanzin)
+*   [#2076](https://github.com/pmd/pmd/pull/2076): \[java] Add Metric ClassFanOutComplexity - [Andi Pabst](https://github.com/andipabst)
+*   [#2078](https://github.com/pmd/pmd/pull/2078): \[java] DoNotUseThreads should not warn on Runnable #1627 - [Michael Clay](https://github.com/mclay)
 
 {% endtocmaker %}
 
